#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-01-01  Christian Heller  <christian.heller@tuxtax.de>
        * Implement decoding of percent-encoded ASCII character arrays
        * Change copyright year to 2011 in all CYBOI source code files

2010-12-31  Christian Heller  <christian.heller@tuxtax.de>
        * Figure out problem with uri handling (percent-decoding missing)

2010-12-30  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri handling

2010-12-29  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri handling

2010-12-28  Christian Heller  <christian.heller@tuxtax.de>
        * Continue uri authority handling

2010-12-27  Christian Heller  <christian.heller@tuxtax.de>
        * Replace "process" functions with "decode" functions
        * Replace "evaluate" functions with "select" functions

2010-12-23  Christian Heller  <christian.heller@tuxtax.de>
        * Replace "process" functions with "decode" functions
        * Factor out many functions into their own specific files

2010-12-20  Christian Heller  <christian.heller@tuxtax.de>
        * Investigate container classes of Java Class Framework
            (e.g. Collections, Maps, MutableTreeNode)
            in order to identify groups of necessary container functions
        * Store these functions in file "todo_cyboi_java_comparison.txt"

2010-12-14  Christian Heller  <christian.heller@tuxtax.de>
        * Create new files and continue uri handling
        * Extend "detect" function with flag indicating desired move of position

2010-12-10  Christian Heller  <christian.heller@tuxtax.de>
        * Create new files and continue uri handling
        * Distinguish between various http schemes using "evaluate" function

2010-11-29  Christian Heller  <christian.heller@tuxtax.de>
        * Create new files for uri handling